[project]
name = "notebookutils"
version = "0.1.0"
description = "A package that allows to use synapse mssparkutils without actual functionality. This helps to generate the build. Unofficial fork of https://pypi.org/project/dummy-notebookutils/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["notebookutils"]
exclude = ["**/__pycache__"]

reportUnusedParameter = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportExplicitAny = false
reportCallInDefaultInitializer = false

executionEnvironments = [
    { root = "notebookutils/__init__.py", reportMissingParameterType=false, reportUnknownParameterType=false }
]