[project]
name = "dummy-notebookutils-reborn"
version = "1.1.11"  # Mirror `notebookutils` actual version
description = "A package that allows to use synapse mssparkutils without actual functionality. This helps to generate the build. Unofficial fork of dummy-notebookutils."
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/wtfzambo/notebookutils"
Issues = "https://github.com/wtfzambo/notebookutils/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebookutils"]

[tool.pyright]
include = ["notebookutils"]
exclude = ["**/__pycache__"]

reportUnusedParameter = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportExplicitAny = false
reportCallInDefaultInitializer = false

executionEnvironments = [
    { root = "notebookutils/__init__.py", reportMissingParameterType=false, reportUnknownParameterType=false }
]